# FeatherCast

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  FeatherCast-0.5.0-win64.exe.sha256  LeanCast-0.4.3-win64.exe.sha256  LeanCast-0.4.5-win64.exe.sha256  LeanCast-0.4.5-win64.zip.sha256  README.md  SECURITY.md  feathercast_optimierungen.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: ci.yml  codeql.yml
docs/: architecture.md  manual-regression-checklist.md  plugin-development.md  release-notes-0.7.0.md  releasing.md
electron/: apps.js  main.js  preload.js  settings.js
native/: FeatherCast.rc.in  app.manifest
native/src/: IExtension.h  accessibility.hpp  app_types.hpp  audio_volume.cpp  audio_volume.hpp  background_executor.hpp  background_services.cpp  background_services.hpp  calculator.hpp  capability_catalog.cpp  capability_catalog.hpp  clock_utilities.hpp  command_catalog.cpp  command_catalog.hpp  converter.hpp  core.hpp  discovery.hpp  discovery_service.cpp  discovery_service.hpp  emoji.hpp  extension_manager.hpp  extension_protocol.hpp  file_content.cpp  file_content.hpp  file_index_service.cpp  file_index_service.hpp  file_search_service.cpp  file_search_service.hpp  game_discovery.cpp  game_discovery.hpp  interaction_state.hpp  json.hpp  library.cpp  library.hpp  library_ui.cpp  library_ui.hpp  main.cpp  motion.hpp  network_client.cpp  network_client.hpp  (+37 more)
native/tests/: background_services_tests.cpp  catalog_ui_state_tests.cpp  core_tests.cpp  discovery_service_tests.cpp  file_search_benchmarks.cpp  game_discovery_tests.cpp  interaction_state_tests.cpp  library_tests.cpp  persistence_service_tests.cpp  plugin_host_tests.cpp  productivity_pack_tests.cpp  runtime_lifecycle_tests.cpp  search_benchmarks.cpp  search_coordinator_tests.cpp  search_files_tests.cpp  settings_executor_tests.cpp  storage_trust_tests.cpp  test_extension.cpp  test_framework.hpp  ui_event_queue_tests.cpp
scripts/: gen-emoji.ps1  gen-icons.ps1
src/: App.jsx  Settings.jsx  fuzzy.js  styles.css
